bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_u8.rs
use bitbybit::bitfield;

#[bitfield(u8, default = 0)]
struct Test {
    #[bits(7..=8, rw)]
    field: u2,
}

fn main() {}
